--- a/front/index.html
+++ b/front/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/material.min.js"></script>
     <script src="./js/socket.io.js"></script>
+    <script src="./js/index.js"></script>
   </head>
 
   <body>
@@ -24,8 +25,8 @@
                     <span class="mdl-chip__contact mdl-color--red mdl-color-text--white generator-button">X</span>
                     <span class="mdl-chip__text generator-text">OFF</span>
                 </span>
-                <div class="mdl-textfield mdl-js-textfield price-input">
-                  <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="price-one">
+                <div class="mdl-textfield mdl-js-textfield price-textfield">
+                  <input class="mdl-textfield__input price-input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="price-one">
                   <label class="mdl-textfield__label" for="price-one">Starting price</label>
                   <span class="mdl-textfield__error">Input is not a number!</span>
                 </div>
@@ -35,8 +36,8 @@
                     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white generator-button">O</span>
                     <span class="mdl-chip__text generator-text">ON</span>
                 </span>
-                <div class="mdl-textfield mdl-js-textfield price-input">
-                  <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="price-two">
+                <div class="mdl-textfield mdl-js-textfield price-textfield">
+                  <input class="mdl-textfield__input price-input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="price-two">
                   <label class="mdl-textfield__label" for="price-two">Starting price</label>
                   <span class="mdl-textfield__error">Input is not a number!</span>
                 </div>
@@ -44,7 +45,7 @@
             </div>
           </div>
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <a onclick="postPrices()" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
               Change control prices
             </a>
           </div>
@@ -63,5 +64,4 @@
       <div class="mdl-layout-spacer"></div>
     </div>
   </body>
-  <script src="./js/index.js"></script>
 </html>
