--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Generators</title>
+    <meta charset="UTF-8">
+
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/material.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    
     <script defer src="./js/material.min.js"></script>
     <script src="./js/socket.io.js"></script>
     <script src="./js/index.js"></script>
